# enseeiht-2nd-year

./: README.md
semestre 7 /Graphs/Projet Graphes/: Manifest.toml  Projet Graphes 2022-2023.ipynb
semestre 7 /Graphs/Projet Graphes 2/: Project.toml  Projet Graphes 2022-2023.ipynb
semestre 7 /Metaprogrammation/TP02-2/: LanceurIndependant.java  MonnaieTest.java  sujet-carnet.code-workspace
semestre 7 /Metaprogrammation/TP03-2/: Analyseur.java  Position.java  projet-optinum.code-workspace
semestre 7 /Metaprogrammation/TP05-2/: UtilityProcessor.java
semestre 7 /Model engineering/projet Idm/: contact.sol
semestre 7 /automates /: be2022-source-Grethen-Meissner.tgz
semestre 7 /automates /source/: parser.ml  tokens.ml
semestre 7 /intergiciel/project data distributions/: pod-api.tar
semestre 7 /intergiciel/sujet-carnet/: RFicheImpl.java  SFicheImpl.java  Saisie.java  carnetimpl.java
semestre 7 /intergiciel/sujet-socket/: LoadBalancer.java  sujet-socket.code-workspace
semestre 7 /intergiciel/sujet-ws/: install-tc.sh  tp-ws.odt
semestre 7 /language translation /: code.tam  passeTypeRat.ml  test.txt  testcomplique.tam  testfonction.tam  testfonction5.tam
semestre 7 /language translation /_build/: .db  .digest-db  log
semestre 7 /language translation /sourceEtu2/: ast.ml  compilateur.ml  exceptions.ml  lexer.mll  parser.mly  passeTypeRat.ml
semestre 7 /language translation /sourceEtu2V2/: compilateur.ml  exceptions.ml  passeTypeRat.ml  printerAst.ml
semestre 7 /operational research/tp3/: TP3.ipynb  (+2 more)
semestre 8/EDP/: TP-EDP.ipynb
semestre 8/English/: Breast cancer detection using AI.docx
semestre 8/Rendu /Rendu 2/tp1ogl-v2023.1.0-rc4/: CMakeLists.txt  README.md  helloteapot.cpp
semestre 8/Rendu /Rendu 2/tp1ogl-v2023.1.0-rc4/freeglut/: CMakeCache.txt  cmake_install.cmake  helloteapot  moreteapots
semestre 8/deep learning/: DL21_TP4_Estimation_de_Posture_Sujet.ipynb  TP3_Classification_de_chiens_et_chats_Sujet.ipynb  TP_RÃ©seaux_de_Neurones_avec_Numpy_Sujet.ipynb
semestre 8/openMp /: BE_OpenMP_2022.tar  synchronizations.tar
(+1723 files in other folders)
